--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
    <title>Ατομικη εργασια</title>
    </head>
    <body>
+     Αντώνης Αραμπατζής
      ΑΕΜ 4254
+     Γνώσεις C++,Java,Python
+     Το URL του GitHub: https://github.com/AntonisArabatzis
    </body>
  </html>
-  
